--- a/force-app/main/default/classes/EmailTemplateController.cls
+++ b/force-app/main/default/classes/EmailTemplateController.cls
@@ -22,6 +22,7 @@ global without sharing class EmailTemplateController {
     global String emailRecipientName {get; set;}
     global String emailRecipientId {get; set;}
     global String emailRecipientLanguage {get; set;}
+    global String emailParametersProvider {get; set;}
     global Id sourceRecordId {get; set;}
     global Boolean replaceLineBreaksOnHTMLBreaks {get; set;}
     
@@ -80,7 +81,7 @@ global without sharing class EmailTemplateController {
     
     public ParametersDataProvider getDataProvider(){
         if (dataProvider == null) {
-            dataProvider = new ParametersDataProvider(sourceRecordId, emailRecipientName, emailRecipientId, emailRecipientLanguage, userCommunityType, outputMode);
+            dataProvider = new ParametersDataProvider(sourceRecordId, emailRecipientName, emailRecipientId, emailRecipientLanguage, emailParametersProvider, userCommunityType, outputMode);
         }
         return dataProvider;
     }
