--- a/force-app/main/default/classes/PSEService.cls
+++ b/force-app/main/default/classes/PSEService.cls
@@ -9,6 +9,7 @@ public without sharing class PSEService {
     public static final String PSE_STATUS_FOLLOW_UP_PERIOD_STARTED = 'Follow-Up Period Started';
     public static final String PSE_STATUS_PARTICIPATION_COMPLETE = 'Participation Complete';
     public static final String PSE_STATUS_TRIAL_COMPLETE = 'Trial Complete';
+    public static final String PSE_STATUS_DROP_OUT = 'Drop Out';
 
     public static final List<String> PSE_STATUS_GROUP_ALL = new List<String>{
             PSE_STATUS_ENROLLED,
@@ -20,7 +21,8 @@ public without sharing class PSEService {
 
     public static final List<String> PSE_STATUS_GROUP_COMPLETE = new List<String>{
             PSE_STATUS_PARTICIPATION_COMPLETE,
-            PSE_STATUS_TRIAL_COMPLETE
+            PSE_STATUS_TRIAL_COMPLETE,
+            PSE_STATUS_DROP_OUT
     };
     
     public static final List<String> PSE_DEFAULT_FIELDS_LIST = new List<String>{
