--- a/force-app/main/default/classes/Test_Batch_ReviewOnboardingFAQ.cls
+++ b/force-app/main/default/classes/Test_Batch_ReviewOnboardingFAQ.cls
@@ -4,28 +4,83 @@
 
 @IsTest
 private class Test_Batch_ReviewOnboardingFAQ {
-    @IsTest
-    static void testBehavior() {
 
-        Contact testContact = new Contact(
-                FirstName='Igor',
-                LastName = 'Malyuta'
-
-        );
+    @TestSetup
+    static void setup() {
+        Contact testContact = new Contact(LastName = 'TestBatch');
         insert testContact;
 
-        testContact.userCommunity_ShowTour__c = 'PI';
+        testContact.userCommunity_ShowTour__c = '';
         update testContact;
+    }
 
+    @IsTest
+    static void testAll() {
         Test.startTest();
-        Batch_ReviewOnboardingFAQ.run('HCP;Participant');
+        Batch_ReviewOnboardingFAQ.runAll();
         Test.stopTest();
 
         Contact contact = [
                 SELECT Id, userCommunity_ShowTour__c
                 FROM Contact
-                WHERE Id = :testContact.Id
-        ].get(0);
-        System.assertEquals(Batch_ReviewOnboardingFAQ.DEFAULT_FIELD_VALUE, contact.userCommunity_ShowTour__c);
+                WHERE LastName = 'TestBatch'
+        ];
+        System.assertEquals(Batch_ReviewOnboardingFAQ.SHOW_ALL, contact.userCommunity_ShowTour__c);
+    }
+
+    @IsTest
+    static void testPI() {
+        Test.startTest();
+        Batch_ReviewOnboardingFAQ.runPI();
+        Test.stopTest();
+
+        Contact contact = [
+                SELECT Id, userCommunity_ShowTour__c
+                FROM Contact
+                WHERE LastName = 'TestBatch'
+        ];
+        System.assertEquals(Batch_ReviewOnboardingFAQ.SHOW_PI, contact.userCommunity_ShowTour__c);
+    }
+
+    @IsTest
+    static void testHCP() {
+        Test.startTest();
+        Batch_ReviewOnboardingFAQ.runHCP();
+        Test.stopTest();
+
+        Contact contact = [
+                SELECT Id, userCommunity_ShowTour__c
+                FROM Contact
+                WHERE LastName = 'TestBatch'
+        ];
+        System.assertEquals(Batch_ReviewOnboardingFAQ.SHOW_HCP, contact.userCommunity_ShowTour__c);
+    }
+
+    @IsTest
+    static void testParticipant() {
+        Test.startTest();
+        Batch_ReviewOnboardingFAQ.runParticipant();
+        Test.stopTest();
+
+        Contact contact = [
+                SELECT Id, userCommunity_ShowTour__c
+                FROM Contact
+                WHERE LastName = 'TestBatch'
+        ];
+        System.assertEquals(Batch_ReviewOnboardingFAQ.SHOW_PARTICIPANT, contact.userCommunity_ShowTour__c);
+    }
+
+    @IsTest
+    static void testFail() {
+        Test.startTest();
+        Batch_ReviewOnboardingFAQ.runAll();
+        Test.stopTest();
+
+        Contact contact = [
+                SELECT Id, userCommunity_ShowTour__c
+                FROM Contact
+                WHERE LastName = 'TestBatch'
+        ];
+        System.assertNotEquals(Batch_ReviewOnboardingFAQ.SHOW_HCP, contact.userCommunity_ShowTour__c);
     }
 }
