--- a/force-app/main/default/classes/LanguageSwitcherRemote.cls
+++ b/force-app/main/default/classes/LanguageSwitcherRemote.cls
@@ -39,6 +39,12 @@ public without sharing class LanguageSwitcherRemote {
                     LanguageLocaleKey = languageKey,
                     LocaleSidKey = localeKey
             );
+            //TODO Move this to another place:
+            List<Task> tasks = TaskService.getTasksCommon('Task_Code__c =\'' + TaskService.TASK_CODE_COMPLETE_YOUR_PROFILE +'\' AND ' + TaskService.getOpenTasksFilter());
+            if(tasks.size() > 0){
+                tasks[0].Status = TaskService.TASK_STATUS_COMPLETED;
+                update tasks[0];
+            }
         }catch (Exception e){
             throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
         }
