--- a/force-app/main/default/classes/TrialService.cls
+++ b/force-app/main/default/classes/TrialService.cls
@@ -14,6 +14,7 @@ public without sharing class TrialService {
             for(Study_Site__c ss : studySites) trials.add(ss.Clinical_Trial_Profile__r);
         }else if(mode == CommunityService.USER_MODE_HCP){
             List<HCP_Enrollment__c> hcpEnrollments = HCPEnrollmentService.getHCPEnrollmentsCommon(mode, null, false);
+            System.debug('hcpCommon' + hcpEnrollments);
             for(HCP_Enrollment__c hcpEnrollment : hcpEnrollments) {
                 if(hcpEnrollment.Study_Site__r.Clinical_Trial_Profile__r != null) trials.add(hcpEnrollment.Study_Site__r.Clinical_Trial_Profile__r);
             }
