--- a/force-app/main/default/classes/IntegrationService.cls
+++ b/force-app/main/default/classes/IntegrationService.cls
@@ -221,12 +221,13 @@ public without sharing class  IntegrationService {
                         Referral_ID__c,
                         Referred_Date__c,
                         Study_Site__r.Protocol_ID__c,
-                        Study_Site__r.Is_Virtual_Study_Site__c
+                        Study_Site__r.Is_Virtual_Study_Site__c,
+                        Study_Site__r.Study_Site_Type__c
                 FROM Participant_Enrollment__c
                 WHERE Id =: participantEnrollmentId
         ];
         
-        if(!pe.Study_Site__r.Is_Virtual_Study_Site__c) return null;
+        if(pe.Study_Site__r.Study_Site_Type__c!='Virtual') return null;
         
         Address addr = new Address();
         addr.Street = pe.Participant__r.Mailing_Street__c;
