--- a/force-app/main/default/classes/ViewPatientsRemote.cls
+++ b/force-app/main/default/classes/ViewPatientsRemote.cls
@@ -27,19 +27,21 @@ public without sharing class ViewPatientsRemote {
     }
 
     @AuraEnabled
-    public static String getInitData(Id trialId, String mode, String btnFilter, String userMode){
+    public static String getInitData(Id trialId,Id siteId, String mode, String btnFilter, String userMode){
         try{
             InitData initData = new InitData();
             //pagination:
             initData.paginationData = new PaginationData();
             //filters data:
-            initData.peFilterData = ParticipantEnrollmentService.getPEFilterData(trialId, mode);
+            initData.peFilterData = ParticipantEnrollmentService.getPEFilterData(trialId, mode, true);
             initData.peFilterData.sortVariants.addAll(new List<LabelValueItem>{
                     new LabelValueItem(SortOrder.ORDER_A_Z, 'Alphabetical_ASC,Participant__r.First_Name__c,Participant__r.Last_Name__c'),
                     new LabelValueItem(SortOrder.ORDER_Z_A, 'Alphabetical_DESC,Participant__r.First_Name__c,Participant__r.Last_Name__c')
             });
             //filters: 
             initData.peFilter = new ParticipantEnrollmentService.PEFilter(initData.peFilterData);
+            initData.peFilter.studySite = siteId;
+            initData.peFilter.study = trialId;
             //set up search fields
             initData.peFilter.searchFields = new List<String>{
                     'Participant__r.First_Name__c',
@@ -88,6 +90,8 @@ public without sharing class ViewPatientsRemote {
     class SearchResult{
         List<PEWrapper> peList;
         PaginationData paginationData;
+        ParticipantEnrollmentService.PEFilter peFilter;
+        ParticipantEnrollmentService.PEFilterData peFilterData;
     }
 
     @AuraEnabled
@@ -118,6 +122,22 @@ public without sharing class ViewPatientsRemote {
                     userMode
             );
             result.paginationData = pagination;
+            result.peFilterData = ParticipantEnrollmentService.getPEFilterData(filter.study, userMode, true);
+            result.peFilterData.sortVariants.addAll(new List<LabelValueItem>{
+                    new LabelValueItem(SortOrder.ORDER_A_Z, 'Alphabetical_ASC,Participant__r.First_Name__c,Participant__r.Last_Name__c'),
+                    new LabelValueItem(SortOrder.ORDER_Z_A, 'Alphabetical_DESC,Participant__r.First_Name__c,Participant__r.Last_Name__c')
+            });
+            result.peFilter = filter;
+            Boolean siteExists = false;
+            for(LabelValueItem site: result.peFilterData.studySites){
+                if (site.value == filter.studySite) {
+                    siteExists = true;
+                    break;
+                }
+            }
+            if(!siteExists){
+                filter.studySite = null;
+            }
             return JSON.serialize(result);
         }catch (Exception e){
             throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
@@ -137,7 +157,7 @@ public without sharing class ViewPatientsRemote {
         try{
             InitDataForPatientProfile initData = new InitDataForPatientProfile();
             //filters data:
-            ParticipantEnrollmentService.PEFilterData peFilterData = ParticipantEnrollmentService.getPEFilterData(null, mode);
+            ParticipantEnrollmentService.PEFilterData peFilterData = ParticipantEnrollmentService.getPEFilterData(null, mode, false);
             //init filters:
             ParticipantEnrollmentService.PEFilter peFilter = new ParticipantEnrollmentService.PEFilter(peFilterData);
             List<String> excludedStatuses = new List<String>{
